--- a/data/settings.json
+++ b/data/settings.json
@@ -1,24 +1,10 @@
 {
   "sidebar": [
     {
-      "section": "Introduction",
       "topics": [
         {
-          "title": "Getting started",
-          "slug": "getting-started"
-        }
-      ]
-    },
-    {
-      "section": "Setup",
-      "topics": [
-        {
-          "title": "Theme configuration",
-          "slug": "theme-configuration"
-        },
-        {
-          "title": "Forestry CMS",
-          "slug": "forestry-cms"
+          "title": "Variabler",
+          "slug": "variables"
         }
       ]
     }
